# LibrePCB

./: .clang-format  .clang-tidy  .cmake-format.py  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitbugtraq  .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  .typos.toml  AUTHORS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  EDA4U.desktop  EDA4U.pro  LibrePCB.drawio  LibrePCB_v2.drawio  README.md  SECURITY.md  a.out  appveyor.yml  common.pri  eda4u.pro  librepcb.pro  rendering.drawio  ressources.qrc
apps/EagleImport/: CMakeLists.txt  EagleImport.pro  UUID_List.ini  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  polygonsimplifier.cpp  polygonsimplifier.h
apps/UuidGenerator/: CMakeLists.txt  UuidGenerator.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
apps/librepcb/: CMakeLists.txt  Info.plist.in  README.md  apptoolbox.cpp  apptoolbox.h  board2dtab.cpp  board2dtab.h  board3dtab.cpp  board3dtab.h  createlibrarytab.cpp  createlibrarytab.h  createlibrarytabsmodel.cpp  createlibrarytabsmodel.h  graphicsscenetab.cpp  graphicsscenetab.h  guiapplication.cpp  guiapplication.h  hometab.cpp  hometab.h  librepcb.pro  main.cpp  mainwindow.cpp  mainwindow.h  notification.cpp  notification.h  notificationsmodel.cpp  notificationsmodel.h  schematictab.cpp  schematictab.h  uitypes.h  windowsection.cpp  windowsection.h  windowsectionsmodel.cpp  windowsectionsmodel.h  windowtab.cpp  windowtab.h  windowtabsmodel.cpp  windowtabsmodel.h  windowtabsmodeladapter.h
apps/librepcb-cli/: CMakeLists.txt  Info.plist.in  commandlineinterface.cpp  commandlineinterface.h  librepcb-cli.pro  main.cpp
apps/librepcb/controlpanel/: controlpanel.cpp  controlpanel.h  controlpanel.ui
apps/librepcb/firstrunwizard/: firstrunwizard.cpp  firstrunwizard.h  firstrunwizard.ui  firstrunwizardpage_welcome.cpp  firstrunwizardpage_welcome.h  firstrunwizardpage_welcome.ui  firstrunwizardpage_workspacepath.cpp  firstrunwizardpage_workspacepath.h  firstrunwizardpage_workspacepath.ui  firstrunwizardpage_workspacesettings.cpp  firstrunwizardpage_workspacesettings.h  firstrunwizardpage_workspacesettings.ui
apps/librepcb/initializeworkspacewizard/: initializeworkspacewizard.h  initializeworkspacewizard.ui  initializeworkspacewizard_chooseimportversion.cpp  initializeworkspacewizard_chooseimportversion.h  initializeworkspacewizard_chooseimportversion.ui  initializeworkspacewizard_choosesettings.h  initializeworkspacewizard_choosesettings.ui  initializeworkspacewizard_finalizeimport.cpp  initializeworkspacewizard_finalizeimport.h  initializeworkspacewizard_finalizeimport.ui  initializeworkspacewizardcontext.cpp  initializeworkspacewizardcontext.h
apps/librepcb/markdown/: markdownconverter.cpp  markdownconverter.h
apps/librepcb/project/: projecteditor.cpp  projecteditor.h  projectreadmerenderer.cpp  projectreadmerenderer.h  projectsmodel.cpp  projectsmodel.h  schematiceditor.cpp  schematiceditor.h
apps/librepcb/projectlibraryupdater/: projectlibraryupdater.cpp  projectlibraryupdater.h
apps/librepcb/rulecheck/: rulecheckmessagesmodel.cpp  rulecheckmessagesmodel.h
apps/librepcb/ui/: appwindow.slint  backend.slint  callbacks.slint  data.slint  edittoolbar.slint  emptytab.slint  globals.slint  helppanel.slint  homepanel.slint  hometab.slint  lengthedit.slint  librariespanel.slint  lineedit.slint  menu.slint  menubar.slint  notificationspopup.slint  panelbutton.slint  panelheader.slint  projectpanel.slint  projectspanel.slint  rulecheckpanel.slint  scenebutton.slint  sidebar.slint  sidebarbutton.slint  statusbar.slint  toolbutton.slint  tooltip.slint  types.slint  windowsection.slint
apps/librepcb/workspace/: favoriteprojectsmodel.cpp  favoriteprojectsmodel.h  filesystemmodel.cpp  filesystemmodel.h  quickaccessmodel.cpp  quickaccessmodel.h  recentprojectsmodel.cpp  recentprojectsmodel.h
libs/clipper2/: CMakeLists.txt
libs/librepcb/common/: CMakeLists.txt  alignment.cpp  alignment.h  application.cpp  application.h  boarddesignrules.cpp  boarddesignrules.h  boardlayer.cpp  boardlayer.h  build_env.h.in  circuitidentifier.h  common.pro  debug.cpp  debug.h  drillsize.cpp  drillsize.h  elementname.h  exceptions.cpp  exceptions.h  gridproperties.cpp  gridproperties.h  norms.h  scopeguard.h  scopeguardlist.h  signalrole.cpp  signalrole.h  signalslot.h  sqlitedatabase.cpp  sqlitedatabase.h  systeminfo.cpp  systeminfo.h  toolbox.cpp  toolbox.h  undocommand.cpp  undocommand.h  undocommandgroup.cpp  undocommandgroup.h  undostack.cpp  undostack.h  uuid.cpp  (+3 more)
libs/librepcb/core/: CMakeLists.txt  application.cpp  application.h  build_env.h.in  debug.cpp  debug.h  exceptions.cpp  exceptions.h  norms.h  qtcompat.h  sqlitedatabase.cpp  sqlitedatabase.h  systeminfo.cpp  systeminfo.h
libs/librepcb/eagleimport/: CMakeLists.txt  converterdb.cpp  converterdb.h  deviceconverter.cpp  deviceconverter.h  devicesetconverter.cpp  devicesetconverter.h  eagleimport.pro  eaglelibraryconverter.cpp  eaglelibraryconverter.h  eaglelibraryimport.cpp  eaglelibraryimport.h  eagleprojectimport.cpp  eagleprojectimport.h  eagletypeconverter.cpp  eagletypeconverter.h  packageconverter.cpp  packageconverter.h  symbolconverter.cpp  symbolconverter.h
libs/librepcb/editor/: CMakeLists.txt  backgroundimagesettings.cpp  backgroundimagesettings.h  editorcommand.cpp  editorcommand.h  editorcommandcategory.h  editorcommandset.h  editorcommandsetupdater.h  graphicsscenetab.cpp  graphicsscenetab.h  guiapplication.cpp  guiapplication.h  hometab.cpp  hometab.h  mainwindow.cpp  mainwindow.h  mainwindowtestadapter.cpp  mainwindowtestadapter.h  notification.cpp  notification.h  notificationsmodel.cpp  notificationsmodel.h  (+16 more)
tests/cli/: README.md  conftest.py  helpers.py  params.py  pyproject.toml  requirements.txt  setup.cfg  test_help.py  test_version.py
tests/funq/: .gitignore  README.md  aliases  conftest.py  pyproject.toml  requirements.txt  setup.cfg
tests/ui/: .gitignore  README.md  conftest.py  pyproject.toml
tests/unittests/: CMakeLists.txt  README.md  dummy.cpp  main.cpp  testhelpers.cpp  testhelpers.h  unittests.pro
(+15500 files in other folders)
