[project]
name = "librepcb-ui-testing"
version = "0.1.0"
description = "LibrePCB system level UI tests"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest",
    "slint-testing",
]

[tool.uv.sources]
slint-testing = { git = "ssh://git@github.com/slint-ui/ui-testing.git", subdirectory = "python", rev = "a985c7d745caa1d842c22a15523049eeef43a50b" }

[dependency-groups]
dev = [
    "ruff",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
addopts = "-v --librepcb-executable=../../build/apps/librepcb/librepcb"
