[project]
name = "librepcb-ui-testing"
version = "0.1.0"
description = "LibrePCB system level UI tests"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest",
    "slint-testing",
]

# slint-testing is not public, see https://testing.slint.dev/
[[tool.uv.index]]
name = "slint-private"
url = "https://testing.slint.dev/simple/"
authenticate = "always"
explicit = true

[tool.uv.sources]
slint-testing = { index = "slint-private" }

[dependency-groups]
dev = [
    "ruff",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
addopts = "-v --librepcb-executable=../../build/apps/librepcb/librepcb"
